================================================================================
Version 1.0.0.0
================================================================================

- First release

================================================================================
Version 1.0.1.0
================================================================================

Fixed Bugs:
- Timer interval bug fixed; the timer doesn't run longer than expected anymore.
- Fixed OpenGL issues that prevented menus to be opened.

New Features:
- Help overlay added that can interactively display help based on clicked engine 
  component.
- Editor has a new view to configure project properties
- Kink tag list added to project configuration describing all kinks used in the 
  project.
- Target verision and project version added to project configuration describing
  the project's version and the engine version the project was saved in.
- Support for key bindings added and settings expanded.
- Changed card selection backend to QML and greatly improved card display.
- Changed Project-Player backend to QML and improved overall look.
- Project-Player can be paused.

Updated Features:
- Upgrade to Qt5.14.2 with msvc2017 for more QJSEngine and QML features.
  -> Recompiled dependant libraries.

Changes:
- In-Game title changed to JOIP Engine.
- Reworked editor models to work more consistently.
- Code editor displays special info-text if no scripts are available.
- Reworked overlays. Overlays are using a manager to determine z-order.