@@ -1,8 +1,8 @@
 #include "InformationWidget.h"
 #include "Application.h"
-#include "FlowLayout.h"
 #include "Settings.h"
 #include "Systems/Resource.h"
+#include "Widgets/FlowLayout.h"
 #include "Widgets/ResourceDisplayWidget.h"
 #include "ui_InformationWidget.h"
 
